
2013-02-27  GoldenKevin  (revision 204)

	* Fixed Chaos scrolls.
	* Moved !jail, !unjail, and !ban commands from CommandProcessor into
	DisciplinaryCommandHandlers.
	* Added !kick command.

2013-02-27  GoldenKevin  (revision 205)

	* Fixed mastery missing for magic skills if not equipped with wand or staff.
	* Moved all monster elemental resistance and makeChanceResult logic for mob
	status effects to MonsterStatusEffectTools.
	* Fixed Poison Mist expiring immediately.
	* Fixed one damage mob poison shown on client and no damage on server.
	* Fixed Venomous Star and Venomous Stab.

2013-03-03  GoldenKevin  (revision 206)

	* Patched packet editing negative mesos when trading or dropping.
	* Patched packet editing quest rewards when starting or completing quest.
	* Fixed QuestRewards.giveRewards giving completion rewards from Strange Dish
	2 when starting Strange Dish 3.
	* All Throwables (not just SQLExceptions) will be caught when auto-commit is
	disabled, and Connection.rollback will be called whenever Connection.commit
	failed or was not yet called so that pooled Connections will always be at a
	clean state.
	* Partially resolved issues that arise when
	CrossServerSynchronization.sendPartyMemberLogOffNotifications,
	CrossServerSynchronization.sendGuildMemberLogOffNotifications, and
	CrossServerSynchronization.sendLeaveChatroom are called in
	GameCharacter.prepareLogOff.

2013-03-06  GoldenKevin  (revision 207)

	* Fixed wrong initial rank being assigned to new guild members.
	* Fixed mobs casting too many skills.
	* Fixed Wings skill crashing the map.
	* Simplified MonsterStatusEffectTools handling of Poison Mist and Venom.
	* Fixed Blizzard/Ice Charge not freezing monsters.
	* Fixed Blind and Hamstring effects expiring almost immediately.
	* Fixed boss monsters being freezable.

Copyright 2011-2013 GoldenKevin
Copying and distribution of this file, with or without modification, are
permitted provided the copyright notice and this notice are preserved.