@@ -2822,6 +2822,10 @@
 	* Fixed Blind and Hamstring effects expiring almost immediately.
 	* Fixed boss monsters being freezable.
 
+2013-03-07  GoldenKevin  (revision 208)
+
+	* Implemented guild BBS.
+
 Copyright 2011-2013 GoldenKevin
 Copying and distribution of this file, with or without modification, are
 permitted provided the copyright notice and this notice are preserved.
